[workspace]

[package]
name = "samd21"
version = "0.0.0"

[dependencies]
cortex-m = "~0.4"
cortex-m-rt = "~0.4"
cortex-m-semihosting = "~0.2"
cortex-m-rtfm = "~0.3"
panic-semihosting = "~0.1"
panic-abort = "~0.1"
sx1509 = { git = "https://github.com/wez/sx1509.git" }
#sx1509 = { path = "../sx1509" }
#ssd1331 = { path = "../ssd1331" }

[features]
use_semihosting = []

[dependencies.metro_m0]
path = "metro_m0"
features = ["rt", "unproven"]

[profile.release]
debug = true
lto = true
