[workspace]
resolver = "2"
default-members = ["hal"]
members = [
	"hal",
	"atsamd-hal-macros",
	"pac/*",
	"boards/*",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsamd-rs/atsamd"
rust-version = "1.77.2"

[workspace.lints.rust]
# TODO: add any workspace-wide rust lint configurations
# TODO: enable to make identifier usage consistent per file
# unused_qualifications = "warn"

[workspace.lints.clippy]
# TODO: add any workspace-wide clippy lint configurations

[profile.dev]
debug = true
opt-level = 0
lto = false

# Neopixel and USB examples rely on some timing constraints that can only be upheld
# with some optimizations enabled.
#
# Add `--profile dev-optimized` to your cargo invocations to use this profile.
[profile.dev-optimized]
inherits = "dev"
opt-level = 2
lto = "thin"


[profile.release]
lto = true
opt-level = "s"
debug = true
