[package]
name = "arduino_mkrzero"
version = "0.1.0"
authors = ["Wez Furlong <wez@wezfurlong.org>", "David McGillicuddy <contact@djmcgill.co.uk>"]
description = "Board Support crate for the Arduino MKRZERO"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal", "arduino"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/wez/atsamd21-rs"
readme = "README.md"

[dependencies]
cortex-m = "~0.5"
embedded-hal = "~0.2"
nb = "~0.1"

[dependencies.cortex-m-rt]
version = "~0.5"
optional = true

[dependencies.panic-abort]
version = "~0.2"
optional = true

[dependencies.atsamd21-hal]
path = "../hal"
version = "~0.1"
default-features = false

[features]
# ask the HAL to enable atsamd21g18a support
default = ["rt", "panic_abort", "atsamd21-hal/samd21g18a"]
rt = ["cortex-m-rt", "atsamd21-hal/samd21g18a-rt"]
panic_abort = ["panic-abort"]
unproven = ["atsamd21-hal/unproven"]
use_semihosting = []
