[package]
authors = ["Tethys Svensson"]
name = "atsamd-hal-macros"
version = "0.2.4"
categories = ["embedded", "hardware-support", "no-std"]
description = "Procedural macros for the atsamd-hal library"
documentation = "https://docs.rs/crate/atsamd-hal-macros/"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
litrs = "0.4.1"
phf = { version = "0.11.1", default-features = false }

[build-dependencies]
phf = { version = "0.11.1", default-features = false }
phf_codegen = "0.11.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
