[package]
name = "atsamd21e18a"
description = "Peripheral access API for ATSAMD21E18A microcontrollers (generated using svd2rust)"
version = "0.2.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
keywords = ["no-std", "arm", "cortex-m"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/wez/atsamd21-rs"
readme = "README.md"

[dependencies]
bare-metal = "~0.2"
cortex-m = "~0.5"
vcell = "~0.1"

[dependencies.cortex-m-rt]
optional = true
version = "~0.5"

[features]
rt = ["cortex-m-rt/device"]
