[package]
name = "circuit_playground_express"
version = "0.1.0"
authors = ["Paul Sajna <paulsajna@gmail.com>"]
description = "Board Support crate for the Adafruit Circuit Playground Express"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/wez/atsamd21-rs"
readme = "README.md"

[dependencies]
cortex-m = "~0.5"
embedded-hal = "~0.2"
nb = "~0.1"

[dependencies.atsamd21-hal]
path = "../hal"
version = "~0.1"
default-features = false

[dev-dependencies]
panic-abort = "~0.2"
cortex-m-rt = "~0.5"

[features]
# ask the HAL to enable atsamd21g18a support
default = ["rt", "atsamd21-hal/samd21g18a"]
rt = ["atsamd21-hal/samd21g18a-rt"]
unproven = ["atsamd21-hal/unproven"]
use_semihosting = []
