[package]
name = "examples-common"
version = "0.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"
edition = "2018"

[dependencies]
cortex-m = "0.7"
panic-halt = "0.2"
panic-semihosting = "0.5"
usbd-serial = "0.1"
usb-device = "0.2"

[dependencies.feather_m0]
path = "../boards/feather_m0"
features = ["usb", "unproven"]
optional = true

[dependencies.feather_m4]
path = "../boards/feather_m4"
features = ["usb", "unproven"]
optional = true

[dependencies.metro_m0]
path = "../boards/metro_m0"
features = ["usb", "unproven"]
optional = true

[dependencies.metro_m4]
path = "../boards/metro_m4"
features = ["usb", "unproven"]
optional = true

[dependencies.samd11_bare]
path = "../boards/samd11_bare"
features = ["unproven"]  # samd11 doesn't have USB
optional = true

# enable when pygamer has full tier-one support
# [dependencies.pygamer]
# path = "../boards/pygamer"
# features = ["usb", "unproven"]
# optional = true

# enable when wio_terminal has full tier-one support
# [dependencies.wio_terminal]
# path = "../boards/wio_terminal"
# features = ["usb", "unproven"]
# optional = true

[features]
default = ["bsp-feather_m4"]

# board support package selection
bsp-feather_m0 = ["feather_m0"]
bsp-feather_m4 = ["feather_m4"]
bsp-metro_m0 = ["metro_m0"]
bsp-metro_m4 = ["metro_m4"]
bsp-samd11_bare = ["samd11_bare"]
# bsp-pygamer = ["pygamer"]
# bsp-wio_terminal = ["wio_terminal"]
