[package]
name = "gemma_m0"
version = "0.1.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
description = "Board Support crate for the Adafruit Gemma M0"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/wez/atsamd21-rs"
readme = "README.md"

[dependencies]
cortex-m = "~0.5"
embedded-hal = "~0.2"
nb = "~0.1"

[dependencies.atsamd21-hal]
path = "../hal"
version = "~0.1"
default-features = false

[dev-dependencies]
panic-abort = "~0.2"
cortex-m-rt = "~0.5"

[features]
# ask the HAL to enable atsamd21e18a support
default = ["rt", "atsamd21-hal/samd21e18a"]
rt = ["atsamd21-hal/samd21e18a-rt"]
unproven = ["atsamd21-hal/unproven"]
use_semihosting = []
