[package]
name = "samd21_mini"
version = "0.1.0"
authors = ["Ze'ev Klapow <zklapow@gmail.com>"]
description = "Board Support crate for the Sparkfun SAMD21 Mini Breakout"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/wez/atsamd21-rs"
readme = "README.md"

[dependencies]
cortex-m = "~0.4"
embedded-hal = "~0.2"
nb = "~0.1"

[dependencies.atsamd21-hal]
path = "../hal"
version = "~0.1"
default-features = false

[dev-dependencies]
panic-abort = "~0.1"
panic-semihosting = "~0.1"
cortex-m-semihosting = "~0.2"
cortex-m-rtfm = "~0.3"
sx1509 = "~0.2"

[features]
# ask the HAL to enable atsamd21g18a support
default = ["rt", "atsamd21-hal/samd21g18a"]
rt = ["atsamd21-hal/rt"]
unproven = ["atsamd21-hal/unproven"]
use_semihosting = []
